--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
   "name": "fk-http-status",
   "description": "Defining http status code in constants",
   "autoload": {
-    "psr-4": [
+    "psr-4": {
       "fk\\http\\": "src"
-    ]
+    }
   }
 }
