--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "fk-http-status",
+  "name": "fk/http-status",
   "description": "Defining http status code in constants",
   "autoload": {
     "psr-4": {
