--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,9 @@
       "fk\\http\\": "src"
     }
   },
-  "minimum-stability": "dev"
+  "extra": {
+    "branch-alias": {
+        "dev-dev": "dev-master"
+    }
+  }
 }
